@@ -1,6 +1,6 @@
-/*[INCLUDE-IF (JAVA_SPEC_VERSION >= 16) & (JAVA_SPEC_VERSION <= 18)]*/
+/*[INCLUDE-IF JAVA_SPEC_VERSION >= 19]*/
 /*******************************************************************************
- * Copyright (c) 2022, 2022 IBM Corp. and others
+ * Copyright (c) 2021, 2022 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -25,31 +25,24 @@ package jdk.internal.foreign.abi;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 
-import jdk.incubator.foreign.FunctionDescriptor;
-/*[IF JAVA_SPEC_VERSION == 18]*/
-import jdk.incubator.foreign.NativeSymbol;
-/*[ENDIF] JAVA_SPEC_VERSION == 18 */
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import openj9.internal.foreign.abi.InternalUpcallHandler;
 
 /**
- * The counterpart in OpenJDK is replaced with this class that wraps up
+ * The counterpart in OpenJDK is replaced with this class that wrap up
  * an upcall handler enabling the native call to the java code at runtime.
  */
-/*[IF JAVA_SPEC_VERSION >= 18]*/
-/* UpcallHandler has been removed in Java 18 */
-public final class ProgrammableUpcallHandler
-/*[ELSE] JAVA_SPEC_VERSION >= 18 */
-public final class ProgrammableUpcallHandler implements UpcallHandler
-/*[ENDIF] JAVA_SPEC_VERSION >= 18 */
-{
+public final class UpcallLinker {
+
 	private final long thunkAddr;
 
 	/* The constructor creates an upcall handler specific to the requested java method
 	 * by generating a native thunk in upcall on a given platform.
 	 */
-	ProgrammableUpcallHandler(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, ResourceScope scope) {
-		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, mt, cDesc, scope);
+	UpcallLinker(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, MemorySession session) {
+		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, mt, cDesc, session);
 		/* The thunk address must be set given entryPoint() is used in OpenJDK */
 		thunkAddr = internalUpcallHandler.upcallThunkAddr();
 	}
@@ -71,17 +64,11 @@ public final class ProgrammableUpcallHandler implements UpcallHandler
 	 * @param target The upcall method handle to the requested java method
 	 * @param mt The MethodType of the upcall method handle
 	 * @param cDesc The FunctionDescriptor of the upcall method handle
-	 * @param scope The ResourceScope of the upcall method handle
-	 * @return the native function symbol(JDK18) or the upcall hander(JDK17) in upcall
+	 * @param session The MemorySession of the upcall method handle
+	 * @return the native symbol
 	 */
-	/*[IF JAVA_SPEC_VERSION == 18]*/
-	public static NativeSymbol makeUpcall(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, ResourceScope scope) {
-		ProgrammableUpcallHandler upcallHandler = new ProgrammableUpcallHandler(target, mt, cDesc, scope);
-		return UpcallStubs.makeUpcall(upcallHandler.entryPoint(), scope);
+	public static MemorySegment make(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, MemorySession session) {
+		UpcallLinker upcallLinker = new UpcallLinker(target, mt, cDesc, session);
+		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), session);
 	}
-	/*[ELSE] JAVA_SPEC_VERSION == 18 */
-	public static UpcallHandler makeUpcall(MethodHandle target, MethodType mt, FunctionDescriptor cDesc, ResourceScope scope) {
-		return new ProgrammableUpcallHandler(target, mt, cDesc, scope);
-	}
-	/*[ENDIF] JAVA_SPEC_VERSION == 18 */
 }
